k8s/cart-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-db
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-db
  template:
    metadata:
      labels:
        app: cart-db
    spec:
      containers:
        - name: cart-db
          image: redis:7.4-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cart-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cart-db
  namespace: ecommerce
spec:
  selector:
    app: cart-db
  ports:
    - port: 6379
      targetPort: 6379
