k8s/inventory-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-db
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
        - name: inventory-db
          image: mongo:8.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: inventory-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-db
  namespace: ecommerce
spec:
  selector:
    app: inventory-db
  ports:
    - port: 27017
      targetPort: 27017
