k8s/payment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-db
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-db
  template:
    metadata:
      labels:
        app: payment-db
    spec:
      containers:
        - name: payment-db
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: payment-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: payment-db
  namespace: ecommerce
spec:
  selector:
    app: payment-db
  ports:
    - port: 5432
      targetPort: 5432
