k8s/product-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-db
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
        - name: product-db
          image: mysql:8.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: product-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: product-db
  namespace: ecommerce
spec:
  selector:
    app: product-db
  ports:
    - port: 3306
      targetPort: 3306
