k8s/user-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: user-db
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: user-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: ecommerce
spec:
  selector:
    app: user-db
  ports:
    - port: 5432
      targetPort: 5432
